kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xai-fulfillment-deployment
  namespace: agridatavalue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xai-fulfillment
  template:
    metadata:
      labels:
        app: xai-fulfillment
    spec:
      containers:
      - name: xai-fulfillment
        image: registry.git.agridatavalue.eu/agridatavalue/platform-integration/xai-fulfilment:<version>
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
