kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: xai-fulfillment-service
  namespace: agridatavalue
spec:
  selector:
    app: xai-fulfillment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
